b=341280, canvas getImageData needs to check for negative width/height, r=pavlov,a=vlad